# liveconditions

./: .gitignore  README.md  conditions.json  pyproject.toml  run_demo.py
src/: mcp_server.py  mcp_tools.py  parser.py
src/models/: __init__.py  extracted.py  fhir.py  validation.py
src/storage/: __init__.py  async_ingestion.py  duckdb_store.py
tests/: __init__.py  test_e2e_flow.py  test_handout_requirements.py  test_pydantic_parser.py
