[project]
name = "assessment"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "duckdb>=1.4.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-conditions = "src.mcp_server:run_server"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
